# deck-robot-remote

./: Cargo.toml  LICENSE_mit  Makefile  README.md  build.rs
.github/workflows/: general.yml
config/: hamilton_config.yaml  hopper_config.yaml
debian/: service
desktop/: guppy.desktop  hamilton.desktop
src/: error.rs  foxglove_server.rs  gamepad.rs  main.rs  messages.rs  tailscale.rs
