[package]
authors = ["David Weis <davidmichaelweis@gmail.com>"]
description = "Remote controller and telemetry display for robots for the Steam Deck"
edition = "2021"
license = "MIT OR APACHE"
name = "deck-robot-remote"
publish = false
readme = "README.md"
repository = "https://github.com/dmweis/deck-robot-remote"
version = "0.1.0"


[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

# logging
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = [
  "registry",
  "env-filter",
  "json",
] }

# serialization
schemars = { version = "0.8.12", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# zenoh
zenoh = "0.11.0"
zenoh-config = "0.11.0"


# Windows xinput
[target.'cfg(windows)'.dependencies]
gilrs = { version = "0.10", features = [
  "serde-serialize",
  "xinput",
], default-features = false }

# Linux wgi
[target.'cfg(not(windows))'.dependencies]
gilrs = { version = "0.10", features = [
  "serde-serialize",
  "wgi",
], default-features = false }
